--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
     <head>
         
+        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
         <link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
         <link href="styles/style.css" rel="stylesheet" type="text/css">
 
@@ -26,7 +27,7 @@
             <li>numero uno</li>
             <li>numero dos</li>
             <li>numero tres</li>
-            <a href="https://www.google.dk/">Google</a>
+            <a target="_blank" href="https://www.google.dk/">Google</a>
         </ul>
 
         
