Some Updates to the welcome message

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <body>
 
         
-        <h1 style="font-family: 'Sigmar One', cursive;">My main title</h1>
+        <h1 style="font-family: 'Sigmar One', cursive;">Welcome!</h1>
+        <h2 style="font-family: 'Sigmar One', cursive;">hello</h2>
 
 
         <img src="images/test-carrot.png" alt="My test image">
